added swagger-ui and completed end-to-end project...

--- a/Online_Cab_Booking_System/src/main/resources/application.properties
+++ b/Online_Cab_Booking_System/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+#swagger ui related properties above line
+
 #changing the server port
 server.port=8888
 #db specific properties
