--- a/Online_Cab_Booking_System/pom.xml
+++ b/Online_Cab_Booking_System/pom.xml
@@ -53,6 +53,24 @@
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>8.0.29</version>
 	</dependency>
+	
+	
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter -->
+	<dependency>
+	    <groupId>io.springfox</groupId>
+	    <artifactId>springfox-boot-starter</artifactId>
+	    <version>3.0.0</version>
+	</dependency>
+		
+	
+	
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+	<dependency>
+	    <groupId>io.springfox</groupId>
+	    <artifactId>springfox-swagger-ui</artifactId>
+	    <version>3.0.0</version>
+	</dependency>
+		
 		
 	</dependencies>
 
